[package]
name = "mdcore"
version = "0.1.0"
edition = "2021"
description = "my-domain shared core: crypto, wire protocol, discovery, transports, and the service/channel-mux framework. Pure Rust, no platform deps."

[lib]
name = "mdcore"

[features]
default = ["webrtc"]
# Heavy, optional services. Excluded from low-power builds so their codec/media
# deps are not pulled in.
av = []
remote-control = []
# WebRTC data-channel rung (str0m, pure-Rust sans-IO with the RustCrypto DTLS
# backend — no tokio, no C/C++). Gated so minimal builds can drop it.
webrtc = ["dep:str0m"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
# "tls" pulls in the rustls backend + bundled webpki roots so HTTPS works (e.g.
# an ngrok https tunnel). Matches the android client's stricter feature set.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
# Lightweight, sans-IO WebRTC for the final connect rung. RustCrypto backend
# only (no aws-lc/openssl) so it cross-compiles cleanly (incl. android NDK).
str0m = { version = "0.21", default-features = false, features = ["rust-crypto"], optional = true }
